--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-        <script src="./javascript.js"></script>
+        <script src="./javascript.js" defer></script>
     </head>
 
     <body>
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+        <div></div>
     </body>
 </html>
