Create on-screen output for game results

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <button class="rock">Rock</button>
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
-        <div></div>
+        <div>
+            <p></p>
+        </div>
     </body>
 </html>
